syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.common";
option java_outer_classname = "CommonProto";

message Address {
  string ipAddress = 1;
  int32 port = 2;
}
